--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -35,9 +35,9 @@ h2 {
 }
 
 p.date { 
-    color:#8e8b8b;
+    color:#ccc;
     font-family: georgia, serif;
-    font-size: 14px;
+    font-size: 12px;
     font-style: italic; 
 }
 
