--- a/mysite/templates/blog/post/list.html
+++ b/mysite/templates/blog/post/list.html
@@ -17,4 +17,5 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-{% endblock %}}
+    {% include "pagination.html" with page=posts %}
+{% endblock %}
