Добавил "поделиться постом"

--- a/mysite/templates/blog/post/detail.html
+++ b/mysite/templates/blog/post/detail.html
@@ -13,4 +13,9 @@
         Автор: {{ post.author }}
     </p>
     {{ post.body|linebreaks }}
+    <p>
+        <a href="{% url "blog:post_share" post.id %}">
+            Поделиться
+        </a>
+    </p>
 {% endblock %}
