--- a/mysite/templates/blog/post/share.html
+++ b/mysite/templates/blog/post/share.html
@@ -6,6 +6,9 @@
         <p>
             "{{ post.title }}" успешно отправлен {{ form.cleaned_data.to }}.
         </p>
+        <a href="{% url "blog:post_list" %}">
+            На главную
+        </a>
     {% else %}
         <h1>Поделиться "{{ post.title }}" по e-mail</h1>
         <form method="post">
