--- a/mysite/templates/blog/post/share.html
+++ b/mysite/templates/blog/post/share.html
@@ -2,17 +2,22 @@
 {% block title %}Поделиться постом{% endblock %}
 {% block content %}
     {% if sent %}
-        <h1>Собщение усмпешно отправлено!</h1>
+        <h1>Собщение успешно отправлено!</h1>
         <p>
-            "{{ post.title }}" успешно отправлен {{ form.cleaned_data.to }}.
+            Пост "{{ post.title }}" успешно отправлен {{ form.cleaned_data.to }}.
         </p>
         <a href="{% url "blog:post_list" %}">
             На главную
         </a>
     {% else %}
-        <h1>Поделиться "{{ post.title }}" по e-mail</h1>
-        <form method="post">
-            {{ form.as_p }}
+        <h1>Поделиться постом "{{ post.title }}" по e-mail</h1>
+        <form method="post" novalidate>
+            {% for field in form %}
+                <div>
+                    {{ field.errors }}
+                    {{ field.label_tag }} {{ field }}
+                </div>
+            {% endfor %}
             {% csrf_token %}
             <input type="submit" value="Отправить">
         </form>
