--- a/mysite/templates/blog/post/detail.html
+++ b/mysite/templates/blog/post/detail.html
@@ -15,7 +15,26 @@
     {{ post.body|linebreaks }}
     <p>
         <a href="{% url "blog:post_share" post.id %}">
-            Поделиться
+            Поделиться постом
         </a>
     </p>
+    {% with comments.count as total_comments %}
+        <h2>
+            Комментариев: {{ total_comments }}
+        </h2>
+    {% endwith %}
+
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                Комментарий {{ forloop.counter }} от {{ comment.name }}
+            {{ comment.created }}     
+        </p>
+            {{ comment.body|linebreaks }}
+        </div>
+        {% empty %}
+            <p>Будьте первым - напишите комментарий.</p>
+        {% endfor %}
+
+    {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
