сделал похожие посты, но не работает выдача деталей поста

--- a/mysite/templates/blog/post/detail.html
+++ b/mysite/templates/blog/post/detail.html
@@ -18,6 +18,16 @@
             Поделиться постом
         </a>
     </p>
+
+    <h2>Похожие посты</h2>
+    {% for post in similar_posts %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </p>
+    {% empty %}
+    Пока похожих постов нет :(
+    {% endfor %}
+
     {% with comments.count as total_comments %}
         <h2>
             Комментариев: {{ total_comments }}
