--- a/mysite/templates/blog/base.html
+++ b/mysite/templates/blog/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load blog_tags %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,8 +11,21 @@
     </head>
     <body>
         <div id="sidebar">
-            <h2>Мой блог</h2>
+            <h2> <a href="{% url "blog:post_list" %}">
+                Мой блог
+            </a></h2>
             <p>Это страничка моего блога.</p>
+            <p>Постов написано: {% total_posts %} </p>
+            <h3>Свежие посты:</h3>
+                {% show_latest_posts 3 %}
+            <h3>Наиболее обсуждаемое:</h3>
+                {% get_most_commented_posts as most_commented_posts %}
+                <ul>
+                    {% for post in most_commented_posts %}
+                        <li>
+                            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                        </li>
+                {% endfor %}
         </div>
         <div id="content">
             {% block content %}
