--- a/mysite/templates/blog/post/detail.html
+++ b/mysite/templates/blog/post/detail.html
@@ -12,14 +12,24 @@
         <br>
         Автор: {{ post.author }}
     </p>
+    <hr>
     {{ post.body|linebreaks }}
+    <hr>
     <p>
         <a href="{% url "blog:post_share" post.id %}">
             Поделиться постом
         </a>
     </p>
 
-    <h2>Похожие посты</h2>
+    <h3>Похожие посты с тегами: 
+        {% for tag in post.tags.all %}
+            <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+            {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </h3>
+     
     {% for post in similar_posts %}
         <p>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
@@ -29,9 +39,9 @@
     {% endfor %}
 
     {% with comments.count as total_comments %}
-        <h2>
+        <h3>
             Комментариев: {{ total_comments }}
-        </h2>
+        </h3>
     {% endwith %}
 
     {% for comment in comments %}
