--- a/mysite/templates/blog/base.html
+++ b/mysite/templates/blog/base.html
@@ -14,8 +14,13 @@
             <h2> <a href="{% url "blog:post_list" %}">
                 Мой блог
             </a></h2>
-            <p>Это страничка моего блога.</p>
+            <p>Это страничка моего блога</p>
             <p>Постов написано: {% total_posts %} </p>
+            <p>
+                <a href="{% url "blog:post_feed" %}">
+                Подписаться на мою RSS рассылку
+                </a>
+            </p>
             <h3>Свежие посты:</h3>
                 {% show_latest_posts 3 %}
             <h3>Наиболее обсуждаемое:</h3>
